// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`overridePathParams() should only targets id for now 1`] = `
Object {
  "item": Array [
    Object {
      "item": Array [
        Object {
          "request": Object {
            "url": Object {
              "path": Array [
                "crm",
                "monkies",
                ":id",
                ":foo",
              ],
              "variable": Array [
                Object {
                  "description": "(Required) ID of the monkey you are acting upon.",
                  "disabled": false,
                  "key": "id",
                  "type": "any",
                  "value": "{{monkeyId}}",
                },
                Object {
                  "description": "(Required) Foo of the monkey you are acting upon.",
                  "disabled": false,
                  "key": "foo",
                  "type": "any",
                  "value": "<string>",
                },
              ],
            },
          },
        },
      ],
      "name": "Monkeys",
    },
  ],
}
`;

exports[`overridePathParams() should replace value of path param with a {{namedId}} variable 1`] = `
Object {
  "item": Array [
    Object {
      "item": Array [
        Object {
          "request": Object {
            "url": Object {
              "path": Array [
                "crm",
                "monkies",
                ":id",
              ],
              "variable": Array [
                Object {
                  "description": "(Required) ID of the monkey you are acting upon.",
                  "disabled": false,
                  "key": "id",
                  "type": "any",
                  "value": "{{monkeyId}}",
                },
              ],
            },
          },
        },
      ],
      "name": "Monkeys",
    },
  ],
}
`;
